--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://aerezart.github.io/my-portfolio",
+  "homepage": "https://aerezart.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
